Add BioDT logo to docs main page

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -136,3 +136,8 @@ code {
     border: 1px solid #e5e5e5;
     border-radius: 3px;
 }
+
+.center-image {
+    display: block;
+    margin: 20px auto;
+}
